Fix for the colouring of a MOT number on IOS

--- a/src/assets/scss/modules/utils/partials/_u-disable-pointer-events.scss
+++ b/src/assets/scss/modules/utils/partials/_u-disable-pointer-events.scss
@@ -1,3 +1,5 @@
 .u-disable-pointer-events {
   pointer-events: none;
+  color: inherit;
+  text-decoration: none;
 }
